Fixing responsive on iPhone SE 5

--- a/src/Components/CompanyCard/styles.css
+++ b/src/Components/CompanyCard/styles.css
@@ -112,3 +112,9 @@
   border-radius: 5px;
   border: 1px solid #ebeced;
 }
+
+@media only screen and (max-width: 320px) and (min-width: 0px) {
+  .link-company {
+    min-width: 245px !important;
+  }
+}
